# agent-skill-installer

./: .gitignore  AGENTS.md  MANIFEST.in  NEWS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  prepare-release.yml  publish.yml  release-on-approval.yml
docs/: api-and-wrapper-cli.md  authoring-skills.md  installing-skills.md  maintainer-guide.md  packaging-and-api.md  packaging.md  platform-specific-skills.md
examples/: README.md
examples/api-install/: README.md  install_demo_skill.py
examples/api-install/skill/: SKILL.md
examples/companion-wheel-skill/: README.md
examples/companion-wheel-skill/native-client/: MANIFEST.in  pyproject.toml
examples/companion-wheel-skill/skill-package/: MANIFEST.in  pyproject.toml
examples/companion-wheel-skill/skill-package/companion_wheel_skill/skill/: SKILL.md  agent-skill-installer.yaml
examples/demo-installer/: MANIFEST.in  README.md  pyproject.toml
examples/demo-installer/src/demo_agent_skill/: __init__.py  cli.py
examples/demo-installer/src/demo_agent_skill/_skill/: SKILL.md
examples/demo-installer/src/demo_agent_skill/_skill/scripts/: hello.py
examples/demo-installer/src/demo_agent_skill/skill/scripts/: hello.py
examples/platform-specific-skill/: README.md
examples/platform-specific-skill/selector/: MANIFEST.in  README.md  pyproject.toml
examples/platform-specific-skill/selector/src/platform_specific_selector/_skill/: agent-skill-selector.yaml
examples/platform-specific-skill/targets/platform-specific-skill-linux-amd64/: MANIFEST.in  README.md  pyproject.toml
examples/platform-specific-skill/targets/platform-specific-skill-linux-amd64/src/platform_specific_skill_linux_amd64/_skill/: SKILL.md  agent-skill-installer.yaml
examples/platform-specific-skill/targets/platform-specific-skill-linux-arm64/: MANIFEST.in  README.md  pyproject.toml
examples/platform-specific-skill/targets/platform-specific-skill-linux-arm64/src/platform_specific_skill_linux_arm64/_skill/: SKILL.md  agent-skill-installer.yaml
examples/wheel-skill/: MANIFEST.in  README.md  pyproject.toml
examples/wheel-skill/src/wheel_agent_skill/_skill/scripts/: hello.py
examples/wheel-skill/wheel_agent_skill/skill/: SKILL.md  agent-skill-installer.yaml
news/: 1.feature  18.api_change  18.feature  19.api_change  24.api_change  25.api_change  8.bugfix
src/agent_skill_installer/: __init__.py  __main__.py  cli.py  config.py  installer.py
src/skill_installer/: __init__.py  __main__.py  installer.py
tests/agent_skill_installer/: test_config.py  test_examples.py  test_installer.py
tests/skill_installer/: test_installer.py
