[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-installer"
version = "0.1.0"
description = "Generic installer core for projects that distribute agent skills"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Omry Yadan" },
]
keywords = ["agents", "skills", "installer", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "omegaconf>=2.3.0",
  "textual>=0.89.0",
]

[tool.setuptools.packages.find]
where = ["src"]
