[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-installer"
version = "0.1.3"
description = "Generic installer core for projects that distribute agent skills"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Omry Yadan" },
]
keywords = ["agents", "skills", "installer", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]
dependencies = [
  "omegaconf>=2.3.0",
  "packaging>=24.0",
  "textual>=0.89.0",
]

[project.urls]
Homepage = "https://github.com/omry/agent-skill-installer"
Repository = "https://github.com/omry/agent-skill-installer"
Issues = "https://github.com/omry/agent-skill-installer/issues"
Documentation = "https://github.com/omry/agent-skill-installer#readme"

[project.scripts]
agent-skill-installer = "agent_skill_installer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.towncrier]
package = "agent_skill_installer"
package_dir = "src"
filename = "NEWS.md"
directory = "news/"
title_format = "## Agent Skill Installer {version} ({project_date})"
template = "news/_template.rst"
issue_format = "[#{issue}](https://github.com/omry/agent-skill-installer/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = [""]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "api_change"
name = "API changes and deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous changes"
showcontent = true
