[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "example-native-client"
version = "0.1.0"
description = "Example companion package that provides an executable"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
