[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-wheel-skill"
version = "0.1.0"
description = "Example skill that replaces a launcher from a companion wheel"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
